<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:focusable="true"
	android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <ImageView
	    android:id="@+id/blueMarginMainMenu1"
	    android:layout_width="fill_parent"
	    android:layout_height="3dp"
	    android:contentDescription="@string/select_camera"
	    android:src="@drawable/blue_line" />

    <RelativeLayout
        android:background="@drawable/gray_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:paddingLeft="5dp"
        android:paddingRight="@dimen/activity_horizontal_margin" >
        
    	<ImageView
        	android:id="@+id/backButton"
        	android:contentDescription="@string/select_camera"
        	android:layout_width="35dp"
        	android:layout_height="35dp"
        	android:layout_alignParentLeft="true"
        	android:layout_centerVertical="true"
        	android:scaleType="fitCenter"
        	android:onClick="returnToCameraMenu"
        	android:src="@drawable/left_arrow" />

        <TextView
            android:id="@+id/ftpHeader"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/backButton"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:text="@string/notification_settings"
            android:clickable="true"
            android:onClick="returnToCameraMenu"
            android:textColor="#0099CC"
            android:textSize="24sp" />
    
	</RelativeLayout>
	
    <ImageView
        android:id="@+id/blueMarginMainMenu2"
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:contentDescription="@string/select_camera"
        android:src="@drawable/blue_line" />
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <LinearLayout
    		android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:orientation="vertical" >
    		
   			<CheckBox
			   android:id="@+id/showNotification"
			   android:layout_width="wrap_content"
			   android:layout_height="wrap_content"
			   android:layout_marginTop="10dp"
			   android:layout_gravity="center"
			   android:textSize="18sp"
			   android:textColor="#FFFFFF"
			   android:text="@string/show_notificaiton" />
			   
			<TextView
		        android:layout_marginTop="5dp"
		        android:layout_marginLeft="25dp"
		        android:layout_marginRight="25dp"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="#0099CC"
            	android:textSize="12sp"
		        android:text="@string/show_notification_help" />
		        
		 	<CheckBox
			   android:id="@+id/getSnapshot"
			   android:layout_width="wrap_content"
			   android:layout_height="wrap_content"
			   android:layout_marginTop="10dp"
			   android:layout_gravity="center"
			   android:textSize="18sp"
			   android:textColor="#FFFFFF"
			   android:text="@string/notification_snapshot" />
			   
			<TextView
		        android:layout_marginTop="5dp"
		        android:layout_marginLeft="25dp"
		        android:layout_marginRight="25dp"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="#0099CC"
            	android:textSize="12sp"
		        android:text="@string/notification_snapshot_help" />
		        
		    <Button
		        android:id="@+id/notificationSound"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="15dp"
		        android:layout_gravity="center"
		        android:text="@string/notification_sound" 
		        android:onClick="notificationSound" />
		  
		</LinearLayout>

    </ScrollView>

</LinearLayout>